<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:layout_centerInParent="true"
        android:text="@string/error"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button"
        android:text="@string/back"
        android:visibility="invisible"
        android:layout_below="@id/error"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/day_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/city"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFFFFF"
            android:layout_marginStart="10dp"/>

    </LinearLayout>



    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/day_layout"/>

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/condition"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/temp_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:layout_below="@id/condition_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/temp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/temp_number"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:text="@string/temp_min"/>

        <TextView
            android:id="@+id/temp_min_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:text="@string/temp_max"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/temp_max_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/btn_previous"
            android:background="@drawable/custom_button"
            android:paddingHorizontal="10dp"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/btn_next"
            android:background="@drawable/custom_button"
            android:paddingHorizontal="10dp"
            android:layout_marginStart="50dp"/>

    </LinearLayout>
</RelativeLayout>